--- a/targets/Intersect.targets
+++ b/targets/Intersect.targets
@@ -1,8 +1,9 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <BuildConfigurationDir>$(SolutionDir)build\$(Configuration.ToLower())</BuildConfigurationDir>
+    <BuildConfigurationDir Condition="'$(Configuration)' == 'NoFody'">$(SolutionDir)build\debug</BuildConfigurationDir>
     <IntersectBuildingAssemblyFile>$(BuildConfigurationDir)\Intersect.Building\Intersect.Building.dll</IntersectBuildingAssemblyFile>
-    <NetworkKeyOutputDir>$(SolutionDir)build\$(Configuration.ToLower())\keys</NetworkKeyOutputDir>
+    <NetworkKeyOutputDir>$(BuildConfigurationDir)\keys</NetworkKeyOutputDir>
     <NetworkHandshakePublicKey>$(NetworkKeyOutputDir)\network.handshake.bkey.pub</NetworkHandshakePublicKey>
     <NetworkHandshakePrivateKey>$(NetworkKeyOutputDir)\network.handshake.bkey</NetworkHandshakePrivateKey>
   </PropertyGroup>
