--- a/Intersect.Server/Intersect.Server.csproj
+++ b/Intersect.Server/Intersect.Server.csproj
@@ -115,6 +115,9 @@
     <Optimize>false</Optimize>
     <DisableFody>true</DisableFody>
     <RunCodeAnalysis>false</RunCodeAnalysis>
+    <NetworkKeyOutputDir>$(SolutionDir)build\debug\keys</NetworkKeyOutputDir>
+    <NetworkHandshakePublicKey>$(NetworkKeyOutputDir)\network.handshake.bkey.pub</NetworkHandshakePublicKey>
+    <NetworkHandshakePrivateKey>$(NetworkKeyOutputDir)\network.handshake.bkey</NetworkHandshakePrivateKey>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>..\build\release\server\</OutputPath>
@@ -433,14 +436,20 @@
     <Compile Include="Core\LogicService.LogicThread.cs" />
     <Compile Include="Core\Services\IConsoleService.cs" />
     <Compile Include="Core\Services\ILogicService.cs" />
+    <Compile Include="Database\GameData\Migrations\20200329021500_Beta6.cs" />
+    <Compile Include="Database\GameData\Migrations\20201112213700_AddInitialDataMigrationHistory.cs" />
+    <Compile Include="Database\Migration\DataMigration.cs" />
     <Compile Include="Database\DbLogger.cs" />
     <Compile Include="Database\DbLoggerProvider.cs" />
     <Compile Include="Database\GameData\GameContext.cs" />
-    <Compile Include="Database\GameData\Migrations\Beta6Migration.cs" />
     <Compile Include="Database\IntersectDbContext.cs" />
     <Compile Include="Database\Logging\LoggingContext.cs" />
     <Compile Include="Database\Logging\RequestLog.cs" />
     <Compile Include="Database\MigrationBuilderExtensions.cs" />
+    <Compile Include="Database\Migration\DataMigrationAttribute.cs" />
+    <Compile Include="Database\Migration\DataMigrationHistory.cs" />
+    <Compile Include="Database\Migration\DataMigrationMetadata.cs" />
+    <Compile Include="Database\Migration\RequiresMigrationAttribute.cs" />
     <Compile Include="Database\PlayerData\Api\RefreshToken.cs" />
     <Compile Include="Database\PlayerData\Ban.cs" />
     <Compile Include="Database\PlayerData\Players\Bag.cs" />
@@ -493,6 +502,14 @@
     <Compile Include="Entities\Pathfinding\SpatialAStar.cs" />
     <Compile Include="Entities\Pathfinding\PathfinderTarget.cs" />
     <Compile Include="Entities\Pathfinding\PriorityQueue.cs" />
+    <Compile Include="Migrations\20201112030147_AddDataMigrationHistory.cs" />
+    <Compile Include="Migrations\20201112030147_AddDataMigrationHistory.designer.cs">
+      <DependentUpon>20201112030147_AddDataMigrationHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Game\20201112030046_AddDataMigrationHistory.cs" />
+    <Compile Include="Migrations\Game\20201112030046_AddDataMigrationHistory.designer.cs">
+      <DependentUpon>20201112030046_AddDataMigrationHistory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Networking\Client.cs" />
     <Compile Include="Entities\Npc.cs" />
     <Compile Include="Networking\Helpers\NetDebug.cs" />
