--- a/Intersect.Client/packages.config
+++ b/Intersect.Client/packages.config
@@ -5,6 +5,7 @@
   <package id="Costura.Fody" version="3.3.3" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net461" />
+  <package id="Lib.Harmony" version="2.0.4" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
