--- a/Intersect.Server/Intersect.Server.csproj
+++ b/Intersect.Server/Intersect.Server.csproj
@@ -453,8 +453,22 @@
     <Compile Include="Database\MigrationBuilderExtensions.cs" />
     <Compile Include="Database\PlayerData\Api\RefreshToken.cs" />
     <Compile Include="Database\PlayerData\Ban.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupCreateResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupDisbandResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupInviteAcceptResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupInviteResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupKickResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupLeaveResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupLogic.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupMemberAddResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupMemberRemoveResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\GroupPromoteResult.cs" />
+    <Compile Include="Database\PlayerData\Groups\Group.Database.cs" />
+    <Compile Include="Database\PlayerData\Groups\IGroupLogic.cs" />
+    <Compile Include="Database\PlayerData\Groups\MissingDataException.cs" />
+    <Compile Include="Database\PlayerData\Groups\PartyLogic.cs" />
     <Compile Include="Database\PlayerData\IPlayerContext.cs" />
-    <Compile Include="Database\PlayerData\Group.cs" />
+    <Compile Include="Database\PlayerData\Groups\Group.cs" />
     <Compile Include="Database\PlayerData\Players\Bag.cs" />
     <Compile Include="Database\PlayerData\Players\BagSlot.cs" />
     <Compile Include="Database\PlayerData\Players\BankSlot.cs" />
