And more changes.

--- a/Intersect.Server.Framework/Intersect.Server.Framework.csproj
+++ b/Intersect.Server.Framework/Intersect.Server.Framework.csproj
@@ -80,10 +80,18 @@
     <Compile Include="Entities\Combat\IDoT.cs" />
     <Compile Include="Entities\Combat\IStat.cs" />
     <Compile Include="Entities\Combat\IStatus.cs" />
+    <Compile Include="Entities\Events\ICommandInstance.cs" />
+    <Compile Include="Entities\Events\IEvent.cs" />
+    <Compile Include="Entities\Events\IEventPageInstance.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\INpc.cs" />
     <Compile Include="Entities\IPlayer.cs" />
+    <Compile Include="Entities\IProjectile.cs" />
+    <Compile Include="Entities\IProjectileSpawn.cs" />
     <Compile Include="Entities\Label.cs" />
+    <Compile Include="Maps\IMapInstance.cs" />
+    <Compile Include="Maps\IMapItem.cs" />
+    <Compile Include="Maps\IMapTrapInstance.cs" />
     <Compile Include="Plugins\Events\Entities\EntitySpawnEventArgs.cs" />
     <Compile Include="Plugins\Helpers\IEntityHelper.cs" />
     <Compile Include="Plugins\ServerPluginEntry.cs" />
