--- a/Intersect.Server/Intersect.Server.csproj
+++ b/Intersect.Server/Intersect.Server.csproj
@@ -513,7 +513,7 @@
     <Compile Include="Maps\MapAnimations.cs" />
     <Compile Include="Maps\MapEntityMovements.cs" />
     <Compile Include="Maps\MapInstance.cs" />
-    <Compile Include="Maps\MapItemInstance.cs" />
+    <Compile Include="Maps\MapItem.cs" />
     <Compile Include="Maps\MapItemSpawn.cs" />
     <Compile Include="Maps\MapNpcSpawn.cs" />
     <Compile Include="Maps\MapResourceSpawn.cs" />
