fix: resolved background service lifecycle issues

--- a/Intersect.Server/appsettings.Development.json
+++ b/Intersect.Server/appsettings.Development.json
@@ -7,18 +7,10 @@
       "Microsoft": "Information"
     }
   },
-  "Services": {
-    "Console": {
-      "Enabled": true
-    },
-    "Logic": {
-      "Enabled": true
-    }
-  },
   "Kestrel": {
     "AddServerHeader": true,
     "AllowResponseHeaderCompression": false,
-    "DisableStringReuse": "true",
+    "DisableStringReuse": false,
     "Endpoints": {
       "Http": {
         "Url": "http://localhost:5400"
