fix: refactored to have generic options - fixed compiler errors (hiding without new is now an error) - fixed some misc warnings

--- a/Framework/Intersect.Framework/Intersect.Framework.csproj
+++ b/Framework/Intersect.Framework/Intersect.Framework.csproj
@@ -29,6 +29,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ServicesResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Configuration\ConfigurationStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ConfigurationStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +50,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>ServicesResources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Configuration\ConfigurationStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ConfigurationStrings.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
