fix: add services subsection

--- a/Intersect.Server/appsettings.json
+++ b/Intersect.Server/appsettings.json
@@ -7,11 +7,13 @@
     }
   },
   "Intersect": {
-    "Console": {
-      "Enabled": true
-    },
-    "Logic": {
-      "Enabled": true
+    "Services": {
+      "Console": {
+        "Enabled": true
+      },
+      "Logic": {
+        "Enabled": true
+      }
     }
   }
 }
