auto build on main-net7

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build Intersect
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "main-net7" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "main-net7" ]
 
 permissions:
   contents: write
