--- a/Intersect.Server.Framework/Intersect.Server.Framework.csproj
+++ b/Intersect.Server.Framework/Intersect.Server.Framework.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
+    <Configurations>Debug;Release;Testing</Configurations>
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
