--- a/Intersect.Tests.Network/Intersect.Tests.Network.csproj
+++ b/Intersect.Tests.Network/Intersect.Tests.Network.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
+    <Configurations>Debug;Release;Testing</Configurations>
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
