--- a/Intersect.Network/Intersect.Network.csproj
+++ b/Intersect.Network/Intersect.Network.csproj
@@ -32,7 +32,8 @@
 
   <ItemGroup>
     <PackageReference Include="AscensionGameDev.Intersect.Building" Version="0.8.0.13-beta" GeneratePathProperty="True" />
-    <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug" />
+    <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.9.0.1-beta" />
+<!--    <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug" />-->
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
