cleanup nuget packages

--- a/Intersect.Editor/Intersect.Editor.csproj
+++ b/Intersect.Editor/Intersect.Editor.csproj
@@ -76,8 +76,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.VersionCheckAnalyzer" Version="3.0.0" />
+    <PackageReference Version="3.0.0" />
+    <PackageReference Version="3.0.0" />
     <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="3.0.0" />
     <PackageReference Include="Microsoft.NetCore.Analyzers" Version="3.0.0" />
     <PackageReference Include="Microsoft.NetFramework.Analyzers" Version="3.0.0" />
